Keep seed test compatible with Java 17